--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <div class="full" style="position: absolute; top:100%; height:40%;">
     <div class="content">
         <div class="link"><a href="mailto: yucenli@gmail.com">contact</a></div>
-        <div class="link"><a href="resume.pdf" target="_blank">Resume</a></div>
+        <div class="link"><a href="pdf/resume.pdf" target="_blank">Resume</a></div>
     </div>
 </div>
 </div>
@@ -45,7 +45,7 @@
     </div>
 </div>
 
-<div class="midimg" style="background-image:url('zionlook.jpg')">
+<div class="midimg" style="background-image:url('large/zionlook.jpg')">
 </div>
 
 <div class="chunk">
@@ -155,7 +155,7 @@
     </div>
 </div>
 
-<div class="midimg" style="background-image:url('mad.jpg')">
+<div class="midimg" style="background-image:url('large/mad.jpg')">
 </div>
 
 <div class="chunk">
