--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <title>Yucen Li</title>
+<link rel="icon"
+      type="image/png"
+      href="projimg/leaf.png">
 <head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="site.js"></script>
