--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <div class="full" style="position: absolute; top:100%; height:40%;">
     <div class="content">
-        <div class="link"><a href="mailto: yucenli@gmail.com">contact</a></div>
+        <div class="link"><a href="mailto: yucenli@gmail.com" target="_blank">contact</a></div>
         <div class="link"><a href="pdf/resume.pdf" target="_blank">Resume</a></div>
     </div>
 </div>
@@ -158,7 +158,7 @@
     </div>
 </div>
 
-<div class="midimg" style="background-image:url('large/mad.jpg')">
+<div class="midimg" style="background-image:url('large/panda.jpg')">
 </div>
 
 <div class="chunk">
